<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="otkorm.pigsfood.acInputOld"
    android:orientation="vertical"
    android:id="@+id/llMain">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/lblBinNum"
        android:layout_weight="1"
        android:gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llOldValue"
        android:layout_weight="4"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lblCenter"
            android:id="@+id/lblOld"
            android:gravity="center"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnUp"
            android:id="@+id/btnOldUp"
            android:layout_weight="1"
            android:textSize="@dimen/txtSizeBtnUpDn"
            android:onClick="onClick"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDn"
            android:id="@+id/btnOldDn"
            android:layout_weight="1"
            android:textSize="@dimen/txtSizeBtnUpDn"
            android:onClick="onClick"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/default_value"
            android:id="@+id/lblOldValue"
            android:layout_weight="10"
            android:gravity="center"
            android:textSize="@dimen/txtSizeExtraLarge" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llButtons"
        android:gravity="center"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/lblDone"
            android:id="@+id/btnDone"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lblCancel"
            android:id="@+id/btnCancel"
            android:gravity="center"
            android:onClick="onClick" />
    </LinearLayout>

</LinearLayout>
