<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="otkorm.pigsfood.acStart"
    android:orientation="vertical"
    android:id="@+id/llMain">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hello"
        android:id="@+id/txtHello"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/txtSizeLarge" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write"
        android:id="@+id/btnWrite"
        android:layout_weight="5"
        android:onClick="onClick"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/txtSizeExtraLarge" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show"
        android:id="@+id/btnShow"
        android:layout_weight="5"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:onClick="onClick"
        android:textSize="@dimen/txtSizeExtraLarge" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:id="@+id/btnEdit"
        android:layout_weight="5"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:onClick="onClick"
        android:textSize="@dimen/txtSizeLarge" />
</LinearLayout>
