<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="otkorm.pigsfood.acValueInput"
    android:orientation="vertical"
    android:id="@+id/llMain">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/lblBinNum"
        android:layout_weight="1"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/llValues"
        android:layout_weight="20"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/llCentValue"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblCenter"
                android:id="@+id/lblCent"
                android:gravity="center"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnUp"
                android:id="@+id/btnCentUp"
                android:layout_weight="1"
                android:textSize="@dimen/txtSizeBtnUpDn"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDn"
                android:id="@+id/btnCentDn"
                android:layout_weight="1"
                android:textSize="@dimen/txtSizeBtnUpDn"
                android:onClick="onClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/default_value"
                android:id="@+id/lblCentValue"
                android:layout_weight="10"
                android:gravity="center"
                android:textSize="@dimen/txtSizeExtraLarge" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/llWallValue"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lblWall"
                android:id="@+id/lblWall"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnUp"
                android:id="@+id/btnWallUp"
                android:layout_weight="1"
                android:textSize="@dimen/txtSizeBtnUpDn"
                android:onClick="onClick" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDn"
                android:id="@+id/btnWallDn"
                android:layout_weight="1"
                android:textSize="@dimen/txtSizeBtnUpDn"
                android:onClick="onClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/default_value"
                android:id="@+id/lblWallValue"
                android:layout_weight="10"
                android:gravity="center"
                android:textSize="@dimen/txtSizeExtraLarge" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llButtons"
        android:gravity="center"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/lblDone"
            android:id="@+id/btnDone"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="onClick" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/lblCancel"
            android:id="@+id/btnCancel"
            android:gravity="center"
            android:onClick="onClick" />
    </LinearLayout>

</LinearLayout>
