<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llMain"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llNumber"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lblLine"
            android:id="@+id/tvCaption"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/txtSizeLarge"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:id="@+id/tvNumber"
            android:gravity="center"
            android:textSize="@dimen/txtSizeExtraLarge"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llInput">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/llValueMain">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="290"
                android:id="@+id/tvValue"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="@dimen/txtSizeBtnUpDn" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/llValueOptions"
                android:gravity="center_vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Terminal"
                    android:id="@+id/btnTerminal" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="sm"
                    android:id="@+id/tvDim"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="@dimen/txtSizeLarge" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Zero"
                    android:id="@+id/btnZero" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llValueChange">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnUp"
                android:id="@+id/btnUp"
                android:textSize="@dimen/txtSizeBtnUpDn" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDn"
                android:id="@+id/btnDown"
                android:textSize="@dimen/txtSizeBtnUpDn" />
        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/rgFoodType"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSeven"
            android:id="@+id/rbSeven"
            android:textSize="@dimen/txtSizeLarge"
            android:layout_marginRight="20dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblEight"
            android:id="@+id/rbEight"
            android:textSize="@dimen/txtSizeLarge"
            android:layout_marginLeft="20dp" />
    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llMass"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mass"
            android:id="@+id/tvMassName"
            android:textSize="@dimen/txtSizeLarge" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="3500"
            android:id="@+id/tvMassValue"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/txtSizeExtraLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kg"
            android:id="@+id/tvMassDim"
            android:textSize="@dimen/txtSizeLarge" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llDensity"
        android:gravity="center_vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Density"
            android:id="@+id/tvDensName"
            android:textSize="@dimen/txtSizeLarge" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="576"
            android:id="@+id/tvDensValue"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/txtSizeLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="kg/m3"
            android:id="@+id/tvDensDim"
            android:textSize="@dimen/txtSizeLarge" />
    </LinearLayout>
</LinearLayout>